# pcre2.py

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  build-requirements.txt  libpcre2.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: buidl.yml  build.yml
benchmarks/: run_regex_redux.py
benchmarks/regex_redux/: baseline.py  hand_optimized.py  pcre2_module.py  pcre2_optimized.py  pcre2_vanilla.py  re_vanilla.py  vanilla.py
pcre2/: __init__.py  consts.pyx  exceptions.pxd  exceptions.pyx  libpcre2.pxd  match.pxd  match.pyx  methods.pyx  pattern.pxd  pattern.pyx  utils.pxd  utils.pyx
pcre2/_cy/: consts.pyx  match.pyx  methods.pyx  pattern.pyx  utils.pxd  utils.pyx
pcre2/_libs/: libpcre2.pxd
pcre2/_utils/: strings.pxd  strings.pyx
pcre2/core/: exceptions.pyx  match.pxd  match.pyx  pattern.pxd  pattern.pyx
requirements/: build-requirements.txt  test-requirements.txt
src/pcre2/: CMakeLists.txt  __init__.py  _cy.pyx  _libpcre2.pxd  consts.pyx  exceptions.pyx  libpcre2.pxd  match.pxd  match.pyx  methods.pyx  pattern.pxd  pattern.pyx  scanner.pxd  scanner.pyx  utils.pxd  utils.pyx
tests/: test_callouts.py  test_groups.py  test_match.py  test_pattern.py  test_re_compatibility.py  utils.py
tools/: download_libpcre2_release.py
