[metadata]
name = pcre2
version = 0.0.1
description = A wrapper around PCRE2 with an API inspired by the standard library
author = Garrett Tetrault
license = BSD 3-Clause License
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
package_dir=
    =src
packages = find:
install_requires = python_version>="3.8"

[options.packages.find]
where=src